# tm4c-defunct

./: .gdb_history  .gdbconfig  .gdbinit  .gitignore  Cargo.toml  README.md  config.gdb  flake.nix  rust-toolchain.toml
.cargo/: config
.github/workflows/: ci.yml
dma-experiment/: uDMA-starter.c
examples/: UT_UTP_tm4c.rs  adc_test.rs  clock_test.rs  dma_api_test.rs  dma_init.rs  dma_sim_test.rs  flash_test.rs  gpio_interrupt.rs  gpio_test.rs  os_load.rs  pwm_test.rs  swap_tests.rs  timers.rs  tm4c_hal_adc.rs  trap_tests.rs  uart_debug.rs  wall_dtect.rs  wall_follower.rs  wall_follower_lc3.rs  wall_follower_rst.rs
src/: flash.rs  generic_adc.rs  generic_gpio.rs  lib.rs  main.rs  memory_trait_RAM_flash.rs  paging.rs
src/memory_impl/: mod.rs  tm4c_memory_impl.rs
src/paging_impl/: mod.rs  tm4c_flash_page_impl.rs  tm4c_flash_paging_config.rs
src/peripherals/: adc.rs  gpio.rs  gpio_singleshot.rs  gpio_singleton.rs  mod.rs  pwm.rs  timers.rs
src/peripherals_generic/: adc.rs  dma.rs  gpio.rs  gpio_impl.rs  mod.rs  pwm.rs
src/peripherals_tm4c/: adc.rs  adc_tm4c_hal_temp.rs  clock.rs  dma_impl.rs  flash.rs  gpio.rs  gpio_singleton.rs  gpio_tm4c_impl.rs  mod.rs  pwm.rs  timers.rs
src/persistent_data_management/: disk.rs  flash.rs  mod.rs  page.rs
